src/objects/BMCServiceDesk__ScanSchedule__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AssignmentId__c</fullName>
        <description>To assignment Id of the scan and scan schedule.</description>
        <label>Assignment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKScanDetail__c</fullName>
        <description>To store reference of the scan with which the scan schedule is associated.</description>
        <label>Scan Detail</label>
        <referenceTo>BMCServiceDesk__ScanDetail__c</referenceTo>
        <relationshipLabel>Scan Schedules</relationshipLabel>
        <relationshipName>ScanSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceCount__c</fullName>
        <label>Recurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceDayOfWeek__c</fullName>
        <description>To store the day of the week on which the scan is scheduled to run.</description>
        <label>Recurrence Day Of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceHours__c</fullName>
        <description>To store frequency in hours ( 0 to 23)</description>
        <label>Recurrence Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceMinutes__c</fullName>
        <description>To store frequency in Minutes (0 to 59)</description>
        <label>Recurrence Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceType__c</fullName>
        <description>To store the type of frequency of the scan schedule.</description>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceWeek__c</fullName>
        <label>Recurrence Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScheduleId__c</fullName>
        <description>To store the Id of the scan schedule.</description>
        <label>Schedule Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScheduleType__c</fullName>
        <description>To store type of the scan schedule.</description>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not scan</fullName>
                </value>
                <value>
                    <fullName>Immediately, one time</fullName>
                </value>
                <value>
                    <fullName>Recurrence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDurationType__c</fullName>
        <description>To store the type of start execution.</description>
        <label>Start Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>At specific date and time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StopDurationType__c</fullName>
        <label>Stop Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No end date</fullName>
                </value>
                <value>
                    <fullName>At specific date and time</fullName>
                </value>
                <value>
                    <fullName>After recurrence count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scan Schedule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>